# FlightBench

./: .gitignore  .vercelignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.vercel/: project.json
dashboard/: .gitignore  package-lock.json  package.json  playwright.config.ts
dashboard/e2e/: dashboard.spec.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/test/[id]/: page.tsx
dashboard/src/components/: TelemetryChart.tsx  VerdictBadge.tsx
dashboard/src/data/: TC-001.json  TC-002.json  TC-003.json  TC-004.json  TC-005.json  TC-006.json  TC-007.json  TC-F01.json  TC-F02.json  TC-F03.json  TC-F04.json  index.json
dashboard/src/lib/: types.ts
include/flight_computer/: FlightComputer.h
include/sensors/: AirspeedSensor.h  AltitudeSensor.h  FaultInjector.h  HeadingSensor.h  Sensor.h
include/simulation/: FlightState.h  SimEngine.h
include/telemetry/: TelemetryLogger.h
include/test_harness/: ReportGenerator.h  TestCase.h  TestResult.h  TestRunner.h
scripts/: generate_dashboard_data.py
src/: main.cpp
src/flight_computer/: FlightComputer.cpp
src/sensors/: AirspeedSensor.cpp  AltitudeSensor.cpp  FaultInjector.cpp  HeadingSensor.cpp
src/simulation/: SimEngine.cpp
src/telemetry/: TelemetryLogger.cpp
src/test_harness/: ReportGenerator.cpp  TestRunner.cpp
tests/test_cases/: FaultTestSuite.h  TestSuite.h
